Tests expects participantid to always be logged. Also, AuditHandler should handle column.name keyed maps.